--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
 							<div class="col-md-3 col-sm-6 col-xs-12">
 								<div class="info-box">
-									<span class="info-box-icon bg-yellow"><i class="fa fa-money"></i></span>
+									<span class="info-box-icon bg-orange"><i class="fa fa-money"></i></span>
 
 									<div class="info-box-content">
 										<span class="info-box-text">Estimated Profit</span>
